# job-formatter-core

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: adapter.rs  error.rs  lib.rs  media.rs  output.rs  row.rs  source.rs
tests/: convert.rs
